# mediawiki-services-machinetranslation

./: .dockerignore  .gitignore  .gitreview  Dockerfile  README.md  blank-requirements.txt  config.json  config.yaml  convert.sh  docker-compose.yaml  entrypoint.sh  gunicorn.conf.py  locustfile.py  logging.conf  models.yaml  pyproject.toml  requirements.txt  server.sh  spec.yaml  test.py  tox.ini  translate.py  translator.py  wsgi.py
.pipeline/: blubber.yaml
docs/: README.md
static/: main.js  style.css
templates/: index.html
test/unit/: reverse.py  test_html.py  test_json.py  test_markdown.py  test_plaintext.py  test_segmenter.py  test_svg.py  test_utils.py
test/unit/webapp/: __init__.py  conftest.py  test_api.py  test_frontend.py  test_normalizer.py
translator/: __init__.py  __main__.py  base.py  cache.py  config.py  factory.py  html.py  indictrans.py  json.py  languages.py  markdown.py  nllb.py  normalizer.py  opus.py  plaintext.py  softcatala.py  svg.py  webpage.py
translator/models/: __init__.py  __main__.py  base.py  config.py  factory.py  indictrans.py  languages.py  madlad.py  nllb.py  opus.py  softcatala.py  utils.py
translator/models/indictrans2/: __init__.py  model.py  utils.py
translator/segmenter/: __init__.py  __main__.py  abbreviations.py
translator/segmenter/languages/: __init__.py  en.py  ml.py
